--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
       <ul>
         <li><a class="blue" href="https://www.amazon.com/baby-reg/michael-mcdermott-may-2023-alexandria/HTVR22RF1CNN?ref_=cm_sw_r_cp_ud_dp_W7Z3TGSEZ6H87N5AAJ84">Amazon</a></li>
         <li><a class="yellow" href="https://www.babylist.com/twins-michael-ashley">Babylist</a></li>
-        <li><a class="red" href="https://www.target.com/gift-registry/gift/mcdermott-graham-twins">Target</a></li>
+        <li><a class="green" href="https://www.target.com/gift-registry/gift/mcdermott-graham-twins">Target</a></li>
       </ul>
     </div>
   </main>
